scss/header.scss
.navbar {
  border-bottom: 2px solid rgba(#C1AF99, 0.5);
  backdrop-filter: blur(1rem);
  z-index: 999;
  position: relative;

  a:hover {
    border-bottom: 2px solid rgba(#C1AF99, 0.5);
  }

  &__inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__logo {
    display: inline-block;
    height: 3em;
    border: none !important;

    img {
      height: inherit;
    }
  }

  &__menu {
    display: flex;
    //gap: 1rem;
    align-items: center;

    > li,
    > li > a,
    .droppy__trigger {
      padding-block: 1em;
    }

    > li > a,
    .droppy__trigger {
      padding-inline: 1em;
    }

  }

  &__whatsapp {
    border: none !important;
  }

  .dropdown-menu li > ul {
    position: absolute;
    top: 200%;
    left: 50%;
    transform: translateX(-50%);
    background-color: #BE1919;
    padding: 1em;
    border-radius: 0.5em;
  }

  .dropdown-menu {
    position: relative;
    z-index: 999;
  }

}

.header {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  .swiper {
    width: auto;
    height: 100%;
  }
  .swiper-button-prev,
  .swiper-button-next {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    z-index: 3;
    cursor: pointer;
    opacity: 0.5;
  }

  .swiper-button-prev:hover,
  .swiper-button-next:hover {
    opacity: 1;
  }

  .swiper-button-prev {
    left: 1rem;
  }
  .swiper-button-next {
    right: 1rem;
  }
}

.hero {
  &__inner {
    padding-block: 11rem;
  }
  &__heading {
    margin-bottom: 2rem;
  }
  &__subheading {
    color: #fff;
    font-size: 1.2rem;
    font-weight: 300;
    margin-bottom: 4rem;
  }
}

